<resources>
    <string name="app_name">Telemedicine</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message">Pesan</string>
    <string name="doctor">Dokter</string>
    <string name="profile">Profil</string>
    <string name="article">Artikel</string>
    <string name="consultation">Konsultasi</string>
    <string name="home">Beranda</string>
    <string name="name">Nama</string>
    <string name="time">Waktu</string>
    <string name="percentage">Persentase</string>
    <string name="find_doctor">Cari Dokter</string>
    <string name="category">Kategori</string>
    <string name="price">Harga</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="asking_account">Belum punya akun? Daftar</string>
    <string name="email">Email</string>
    <string name="password_confirmation">Konfirmasi Kata Sandi</string>
    <string name="title">Judul</string>
    <string name="description">Deskripsi</string>
    <string name="find_disease">Cari Penyakit</string>
    <string name="see_profile">Lihat Profil</string>
    <string name="order_history">Riwayat Pesanan</string>
    <string name="patient_profile">Profil Pasien</string>
    <string name="settings">Pengaturan</string>
    <string name="content">Konten</string>
    <string name="type_a_message">Tuliskan pesan</string>
    <string name="choose">Pilih</string>
    <string name="phone_number">Nomor HP</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="birthday">Tanggal Lahir</string>
    <string name="body_height">Tinggi Badan</string>
    <string name="body_weight">Berat Badan</string>
    <string name="blood_group">Golongan Darah</string>
    <string name="address">Alamat</string>
    <string name="id">ID</string>
    <string name="speciality">Spesialis</string>
    <string name="education">Pendidikan</string>
    <string name="experience">Pengalaman</string>
    <string name="chat">Chat</string>
    <string name="doctor_profile">Profil Dokter</string>
    <string name="hello">Hello</string>
    <string name="your_profile">Profil Anda</string>
    <string name="save">Simpan</string>
    <string name="delete">Hapus</string>
    <string name="use">Gunakan</string>
    <string name="filter">Filter</string>
    <string name="next">Lanjut</string>
    <string name="resend_email_verification">Tidak mendapat email? Kirim ulang</string>
    <string name="email_verification_info">Untuk mengonfirmasi alamat anda, klik link pada email yang kami kirimkan kepada anda.</string>
    <string name="email_verification">Verifikasi Email</string>
    <string name="article_not_found">Belum ada artikel.</string>
    <string name="chat_not_found">Belum ada pesan.</string>
    <string name="doctor_not_found">Belum ada dokter.</string>
    <string name="hint">hint</string>
    <string name="specialist_filter">Filter Spesialis</string>
    <string name="disease_information">Informasi Penyakit</string>
    <string name="treatment">Pengobatan</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="cause">Penyebab</string>
    <string name="complication">Komplikasi</string>
    <string name="symptom">Gejala</string>
    <string name="definition">Pengertian</string>
    <string name="select_image">Pilih Gambar</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="upload_photo">Unggah Foto</string>
    <string name="change_photo">Ubah Foto</string>
    <string name="remove_photo">Hapus Foto</string>
    <string name="experience_not_found">Belum memiliki pengalaman</string>
    <string name="login_as_doctor_info">Atau masuk sebagai dokter</string>
    <string name="login_as_doctor">Masuk sebagai dokter</string>
</resources>