<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="86dp"
        android:layout_marginBottom="28dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/blue_2B95F6"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_edit_text_background"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingVertical="16dp"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_edit_text_background"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingVertical="16dp"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_edit_text_background"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingVertical="16dp"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="54dp"
        android:background="@drawable/rounded_edit_text_background"
        android:hint="@string/password_confirmation"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingVertical="16dp"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:background="@drawable/rounded_button_8"
        android:backgroundTint="@color/blue_2B95F6"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>