<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/app_name"
        android:textColor="@color/pink_D44090"
        android:textSize="24sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/btn_register"
        android:layout_below="@id/tv_app_name"
        android:scaleType="fitXY"
        android:src="@drawable/get_started"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_login"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button_8"
        android:backgroundTint="@color/blue_2B95F6"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_login_doctor"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button_border_8"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/blue_2B95F6"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_doctor"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:text="@string/login_as_doctor"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:textStyle="normal" />

</RelativeLayout>