<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/app_name"
        android:textColor="@color/pink_D44090"
        android:textSize="24sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@drawable/get_started"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/rounded_button_8"
        android:backgroundTint="@color/blue_2B95F6"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button_border_8"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/blue_2B95F6"
        android:textSize="18sp" />

</LinearLayout>