<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:contentInsetStart="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetEnd="0dp"
            android:contentInsetRight="0dp"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/your_profile"
                    android:textAlignment="center"
                    android:textColor="@color/blue_2B95F6"
                    android:textSize="20sp" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="24dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_edit_text_background"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingVertical="16dp"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_edit_text_background"
                android:paddingVertical="16dp"
                android:popupBackground="@color/white"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_edit_text_background"
                android:hint="@string/birthday"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingVertical="16dp"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_edit_text_background"
                android:hint="@string/body_height"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingVertical="16dp"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_edit_text_background"
                android:hint="@string/body_weight"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingVertical="16dp"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/spinner_blood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_edit_text_background"
                android:paddingVertical="16dp"
                android:popupBackground="@color/white"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_edit_text_background"
                android:hint="@string/address"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingVertical="16dp"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_button_8"
                android:backgroundTint="@color/blue_2B95F6"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>