<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:src="@color/grey_DADADA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/blue_2B95F6"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

    <TextView
        android:id="@+id/tv_see_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_profile"
        android:textAlignment="center"
        android:textColor="@color/purple_8883F0"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_history"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="16dp"
        android:text="@string/order_history"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btn_next_history"
        app:layout_constraintEnd_toStartOf="@+id/btn_next_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_next_history" />

    <ImageButton
        android:id="@+id/btn_next_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:background="@android:color/transparent"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_round_navigate_next_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_see_profile"
        app:tint="@color/grey_A6A6A6"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:src="@color/grey_DADADA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_next_history"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/patient_profile"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btn_next_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_next_history" />

    <ImageButton
        android:id="@+id/btn_next_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:background="@android:color/transparent"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_round_navigate_next_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:tint="@color/grey_A6A6A6"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:src="@color/grey_DADADA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_next_profile"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/settings"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btn_next_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_next_profile" />

    <ImageButton
        android:id="@+id/btn_next_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:background="@android:color/transparent"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_round_navigate_next_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:tint="@color/grey_A6A6A6"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>